Fix logo and hamburger placement on mobile

--- a/resources/assets/sass/components/_header.scss
+++ b/resources/assets/sass/components/_header.scss
@@ -15,8 +15,7 @@
 		justify-content: flex-end;
 		flex-direction: row;
 		@include screen-min-md {
-			justify-content: flex-start;
-			padding-left: 30px;
+			justify-content: center;
 		}
 	}
 	&__logo{
@@ -27,7 +26,7 @@
 			flex: 0 0 auto;
 		}
 		@include screen-px (600) {
-			margin-top: 50px;
+			margin-top: 60px;
 			img {
 				width: 200px;
 			}
@@ -230,6 +229,7 @@
 .mobile-nav__logo {
 	text-align: center;
 	width: 300px;
+	max-width: calc(100vw - 80px);
 	margin: 0px auto;
 	display: block;
 }
@@ -247,7 +247,7 @@
 	   display: block;
    }
    @include screen-sm {
-	   top: 90px;
+	   top: 20px;
    }
    a {
 	text-decoration: none;
@@ -260,8 +260,8 @@
   }
 	input {
 		display: block;
-		width: 40px;
-		height: 32px;
+		width: 48px;
+		height: 38px;
 		position: absolute;
 		top: -7px;
 		left: -5px;
@@ -278,9 +278,9 @@
  #menuToggle span
  {
    display: block;
-   width: 40px;
+   width: 48px;
    height: 2px;
-   margin-bottom: 9px;
+   margin: 7px 0;
    position: relative;
    
    background: $purple;
